syntax = "proto3";

package enrollment;

import "protos/studentpb/student.proto";

option go_package = "github.com/nicrodriguezval/grpc/protos/enrollmentpb";

message EnrollmentRequest {
  string id = 1;
  string student_id = 2;
  string test_id = 3;
}

message EnrollmentResponse {
  bool success = 1;
}

message GetStudentPerTestRequest {
  string test_id = 1;
}

service EnrollmentService {
  rpc Enroll(stream EnrollmentRequest) returns (EnrollmentResponse) {}
  rpc GetStudentPerTest(GetStudentPerTestRequest) returns (stream student.Student) {}
}
